# bili-images-uploader

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  TERMS.md
.github/workflows/: docker-publish.yml  docker-test.yml  docker.yml
backend/: pyproject.toml
backend/app/: __init__.py  bili_api.py  config.py  database.py  dependencies.py  main.py  upload_groups.py
demo/: index.html
demo/css/: style.css
demo/js/: app.js
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
